--- a/index.html
+++ b/index.html
@@ -1,20 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Online-Flower-shop-N</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>    
-        
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Montserrat:wght@100&family=Open+Sans:wght@800&family=Work+Sans:ital,wght@1,700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <div class="benar">
+        <h1 class="benar-titel">
+          Let's make beautiful flowers a part of your life.
+        </h1>
+        <p class="benar-description">
+          It is a long established fact that a reader will be distracted by the
+          readable content of a page when looking at its layout. The point of
+          using Lorem Ipsum is that it has a more-or-less normal distribution of
+          letters.
+        </p>
+        <button class="primary-btn">Shop Now</button>
+      </div>
+      <img class="benar-img" src="./Flower Asset/pngwing 10.png" alt="" />
     </header>
-    <main>
-
-    </main>
-    <footer>
-
-    </footer>
-</body>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
