--- a/index.html
+++ b/index.html
@@ -28,7 +28,23 @@
       </div>
       <img class="benar-img" src="./Flower Asset/pngwing 10.png" alt="" />
     </header>
-    <main></main>
+    <main>
+      <section>
+        <div class="section-text">
+          <h3 class="section-title">Our Featured Flowers</h3>
+          <p class="section-description">
+            It is a long established fact that a reader will be distracted by
+            the readable content of a page when looking at its layout.
+          </p>
+        </div>
+        <div class="section-images">
+          <img class="sec-img-1" src="./Flower Asset/pngwing 6.png" alt="" />
+          <img class="sec-img-2" src="./Flower Asset/pngwing 5.png" alt="" />
+          <img class="sec-img-3" src="./Flower Asset/pngwing 7.png" alt="" />
+        </div>
+        
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
