4th-section-End

--- a/index.html
+++ b/index.html
@@ -80,7 +80,22 @@
         <img class="benar-img benar-img-2" src="./Flower Asset/pngwing 8.png" alt="" />
       </div>
       </section>
-      
+      <section>
+        <div class="Instagram-sec">
+          <h2 class="Instagram-title">
+            Instagram
+          </h2>
+          <p class="insta-description">
+            It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.
+          </p>
+          <div class="insta-img">
+            <img src="./Flower Asset/Flower 01.png" alt="">
+            <img src="./Flower Asset/Rectangle 4.png" alt="">
+            <img src="./Flower Asset/Rectangle 5.png" alt="">
+            <img src="./Flower Asset/Rectangle 6.png" alt="">
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
