Main-Section-End

--- a/index.html
+++ b/index.html
@@ -96,7 +96,25 @@
           </div>
         </div>
       </section>
+      <section>
+        <div class="last-sec">
+          <div class="last">
+            <h2 class="last-title">
+              Get The Latest Deals
+            </h2>
+            <p class="last-p">
+              $30 coupon for first shopping.
+            </p>
+            <div class="last-input">
+            <input class="last-in" type="text" placeholder="Enter your email here....">
+            <button class=" last-btn">Subscribe</button>
+          </div>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+      
+    </footer>
   </body>
 </html>
