--- a/index.html
+++ b/index.html
@@ -114,7 +114,9 @@
       </section>
     </main>
     <footer>
-      
+      <h1 class="foot-title">Flower<span>Shop</span></h1>
+      <p class="foot-description">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+      <p class="foot-copyright">@2020-2023, FlowerShop.com. All rights reserved.</p>
     </footer>
   </body>
 </html>
