--- a/index.html
+++ b/index.html
@@ -33,90 +33,80 @@
     <main>
       <section>
         <div class="first-section">
-          <div class="section-text">
-            <h3 class="section-title">Our Featured Flowers</h3>
-            <p class="section-description">
-              It is a long established fact that a reader will be distracted by
-              the readable content of a page when looking at its layout.
-            </p>
-          </div>
+          <h3 class="section-title">Our Featured Flowers</h3>
+          <p class="section-description">
+            It is a long established fact that a reader will be distracted by
+            the readable <br />
+            content of a page when looking at its layout.
+          </p>
           <div class="section-images">
             <img class="sec-img-1" src="./Flower Asset/pngwing 6.png" alt="" />
-
             <img class="sec-img-2" src="./Flower Asset/pngwing 5.png" alt="" />
             <img class="sec-img-3" src="./Flower Asset/pngwing 7.png" alt="" />
           </div>
-          <div class="img-names">
-            <p class="flower-names">Pink Flower</p>
-            <p class="flower-names">Red Flower</p>
-            <p class="flower-names">Yellow Flower</p>
+          <div class="sec-img-name">
+            <p>Pink Flower Tree</p>
+            <p>Red-Pink Flower Tree</p>
+            <p>yellow Flower Tree</p>
           </div>
         </div>
       </section>
       <section>
-        <div class="support-section">
-          <div class="flower-Support">
-            <img class="support-img" src="./Flower Asset/Group 57.png" alt="" />
-            <img class="support-img" src="./Flower Asset/Group 58.png" alt="" />
-            <img class="support-img" src="./Flower Asset/Group 59.png" alt="" />
+        <div class="benar-container">
+          <div class="benar-2">
+            <h1 class="benar-titel-2">Hot Deal ! Sale Up To 25% Off</h1>
+            <p class="benar-description-2">
+              It is a long established fact that a reader will be distracted by
+              the <br> readable content of a page when looking at its layout.
+            </p>
+            <button class="primary-btn-2">Sign Up</button>
           </div>
-          <div class="support-p">
-            <p>Same Day Delivery. Click & Collect.</p>
-            <p>Fresh Flowers. Local Growers.</p>
-            <p>24/7 Free Support.</p>
-          </div>
+          <img class="benar-img-2" src="./Flower Asset/pngwing 8.png" alt="" />
         </div>
-      </section>
-      <section>
-        <div class="header header-benar-2">
-        <div class="benar benar-2">
-          <h1 class="benar-titel benar-title-2">Hot Deal ! Sale Up To 25% Off</h1>
-          <p class="benar-description">
-            It is a long established fact that a reader will be distracted by
-            the readable content of a page when looking at its layout.
-          </p>
-          <button class="primary-btn">Sign Up</button>
-        </div>
-        <img class="benar-img benar-img-2" src="./Flower Asset/pngwing 8.png" alt="" />
-      </div>
       </section>
       <section>
         <div class="Instagram-sec">
-          <h2 class="Instagram-title">
-            Instagram
-          </h2>
+          <h2 class="Instagram-title">Instagram</h2>
           <p class="insta-description">
-            It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.
+            It is a long established fact that a reader will be distracted by
+            the readable <br />
+            content of a page when looking at its layout.
           </p>
           <div class="insta-img">
-            <img src="./Flower Asset/Flower 01.png" alt="">
-            <img src="./Flower Asset/Rectangle 4.png" alt="">
-            <img src="./Flower Asset/Rectangle 5.png" alt="">
-            <img src="./Flower Asset/Rectangle 6.png" alt="">
+            <img src="./Flower Asset/Flower 01.png" alt="" />
+            <img src="./Flower Asset/Rectangle 4.png" alt="" />
+            <img src="./Flower Asset/Rectangle 5.png" alt="" />
+            <img src="./Flower Asset/Rectangle 6.png" alt="" />
           </div>
         </div>
       </section>
       <section>
         <div class="last-sec">
           <div class="last">
-            <h2 class="last-title">
-              Get The Latest Deals
-            </h2>
-            <p class="last-p">
-              $30 coupon for first shopping.
-            </p>
+            <h2 class="last-title">Get The Latest Deals</h2>
+            <p class="last-p">$30 coupon for first shopping.</p>
             <div class="last-input">
-            <input class="last-in" type="text" placeholder="Enter your email here....">
-            <button class=" last-btn">Subscribe</button>
-          </div>
+              <input
+                class="last-in"
+                type="text"
+                placeholder="Enter your email here...."
+              />
+              <button class="last-btn">Subscribe</button>
+            </div>
           </div>
         </div>
       </section>
     </main>
     <footer>
       <h1 class="foot-title">Flower<span>Shop</span></h1>
-      <p class="foot-description">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
-      <p class="foot-copyright">@2020-2023, FlowerShop.com. All rights reserved.</p>
+      <p class="foot-description">
+        It is a long established fact that a reader will be distracted by the
+        readable <br />
+        content of a page when looking at its layout.
+      </p>
+      <p class="foot-copyright">
+        @2020-2023, FlowerShop.com. All rights reserved.
+      </p>
     </footer>
   </body>
 </html>
