--- a/index.html
+++ b/index.html
@@ -57,11 +57,31 @@
             <h1 class="benar-titel-2">Hot Deal ! Sale Up To 25% Off</h1>
             <p class="benar-description-2">
               It is a long established fact that a reader will be distracted by
-              the <br> readable content of a page when looking at its layout.
+              the <br />
+              readable content of a page when looking at its layout.
             </p>
             <button class="primary-btn-2">Sign Up</button>
           </div>
           <img class="benar-img-2" src="./Flower Asset/pngwing 8.png" alt="" />
+        </div>
+      </section>
+      <section>
+        <div class="extra-sec">
+          <div class="extra">
+            <h2 class="extra-title">Latest<span>Products</span></h2>
+          </div>
+          <div class="extra-img">
+            <img class="ex-img" src="./Flower Asset/Rectangle 4.png" alt="" />
+            <img class="ex-img" src="./Flower Asset/Rectangle 6.png" alt="" />
+            <img class="ex-img" src="./Flower Asset/Flower 01.png" alt="" />
+            <img class="ex-img" src="./Flower Asset/Rectangle 5.png" alt="" />
+          </div>
+          <div class="Flowers-price">
+            <p>$20.99</p>
+            <p>$20.99</p>
+            <p>$20.99</p>
+            <p>$20.99</p>
+          </div>
         </div>
       </section>
       <section>
@@ -93,6 +113,28 @@
               />
               <button class="last-btn">Subscribe</button>
             </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="contac-sec">
+          <div class="contac">
+            <h2 class="contac-title"><span>Contact</span> us</h2>
+          </div>
+          <div class="contac-form">
+            <form action="">
+              <input type="text" placeholder="Your Name" />
+              <input type="email" placeholder="Your Email" />
+              <input type="password" placeholder="password" />
+              <textarea
+                name=""
+                placeholder="Message Us"
+                cols="30"
+                rows="10"
+              ></textarea>
+              <input type="submit" class="" value="Sand Message" />
+            </form>
+            <img class="contac-img" src="./Flower Asset/contac00.jpg" alt="" />
           </div>
         </div>
       </section>
